--- a/FinalProject/home/templates/home/base.html
+++ b/FinalProject/home/templates/home/base.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="{% static 'home/css/styles.css' %}">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="{% static '/home/js/search.js' %}"></script>
+    <script src="{% static '/home/js/password.js' %}"></script>
 </head>
 <body>
     <!--navbar-->
@@ -23,12 +24,17 @@
                     <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'wishlist' %}">Wishlist</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'cart' %}">Cart</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
+                    {% if user.is_authenticated %}
+                        <li class="nav-item"><a class = "nav-link" href="{% url 'profile' %}">User</a></li>
+                    {% else %}
+                        <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
     </nav>
 
+    <!--display messages-->
     {% if messages %}
         <div class="container mt-3">
             {% for message in messages %}
