Website ready for submission, fixed some minor issues, added favorites and rating section, historyand improved the design. Final state of the website for now.

--- a/FinalProject/home/static/home/css/styles.css
+++ b/FinalProject/home/static/home/css/styles.css
@@ -71,3 +71,21 @@ footer {
     font-size: 0.85rem;
     border-radius: 5px;
 }
+
+.rate-star {
+    cursor: pointer;
+    color: #ffd700;
+    transition: transform 0.2s ease;
+  }
+  
+  .rate-star:hover {
+    transform: scale(1.2);
+  }
+  
+  .favorite-btn {
+    width: 44px;
+    height: 44px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
