--- a/FinalProject/home/templates/home/base.html
+++ b/FinalProject/home/templates/home/base.html
@@ -7,9 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'home/css/styles.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="{% static '/home/js/search.js' %}"></script>
     <script src="{% static '/home/js/password.js' %}"></script>
+    <script src="{% static '/home/js/rating.js' %}"></script>
+    <script src="{% static '/home/js/all_albums.js' %}"></script>
 </head>
 <body>
     <!--navbar-->
@@ -25,6 +28,7 @@
                     <li class="nav-item"><a class="nav-link" href="{% url 'wishlist' %}">Wishlist</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'cart' %}">Cart</a></li>
                     {% if user.is_authenticated %}
+                        <li class="nav-item"><a class = "nav-link" href="{% url 'favorites' %}">Favorites</a></li>
                         <li class="nav-item"><a class = "nav-link" href="{% url 'profile' %}">User</a></li>
                     {% else %}
                         <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
@@ -54,10 +58,10 @@
     </div>
 
     <!--footer-->
-    <footer class="text-center mt-auto">
+    <footer class="text-center mt-auto bg-dark text-white">
         <div class="container">
-            <p class="mb-1">Vinylio © 2025</p>
-            <small class="text-muted">Curated for collectors.</small>
+            <p class="mb-1">&copy;Vinylio | 2025</p>
+            <small class="text">Curated for collectors.</small>
         </div>
     </footer>
 </body>
