--- a/FinalProject/home/templates/home/category.html
+++ b/FinalProject/home/templates/home/category.html
@@ -5,20 +5,20 @@
 {% block content %}
 <h2 class="mb-4">{{ category.name }}</h2>
 
-<div class="row">
+<div class="d-flex flex-wrap justify-content-center gap-4" id="vinylGrid">
     {% for vinyl in vinyls %}
-        <div class="col-md-3 col-sm-6 mb-4">
-            <div class="card h-100 vinyl-card">
+        <a href="{% url 'vinyl_detail' vinyl.pk %}" class="text-decoration-none text-dark vinyl-card-wrapper">
+            <div class="card vinyl-card text-center">
                 {% if vinyl.image %}
                     <img src="{{ vinyl.image.url }}" class="card-img-top" alt="{{ vinyl.title }}">
                 {% endif %}
-                <div class="card-body">
-                    <h6>{{ vinyl.title }}</h6>
-                    <p>{{ vinyl.artist }}</p>
-                    <p><strong>${{ vinyl.price }}</strong></p>
+                <div class="card-body d-flex flex-column justify-content-between">
+                    <h6 class="card-title text-truncate" title="{{ vinyl.title }}">{{ vinyl.title }}</h6>
+                    <p class="card-text mb-1">{{ vinyl.artist }}</p>
+                    <p class="card-text"><strong>${{ vinyl.price }}</strong></p>
                 </div>
             </div>
-        </div>
+        </a>
     {% endfor %}
 </div>
 
