--- a/FinalProject/register/templates/register/register.html
+++ b/FinalProject/register/templates/register/register.html
@@ -5,11 +5,19 @@
 {% block title %}Register - Vinylio{% endblock %}
 
 {% block content %}
-<h2 class="text-center mb-4">Create an Account</h2>
+<!--registration section-->
+<div class="container mt-5" style="max-width: 500px;">
+    <h2 class="mb-4 text-center">Create an Account</h2>
+    <form method="POST" class="form-group shadow p-4 rounded bg-light">
+        {% csrf_token %}
+        {{ form|crispy }}
+        <button type="submit" class="btn btn-success w-100 mt-2">Register</button>
+        <div class="mt-3 text-center">
+            <!--login button-->
+            <span>Already have an account?</span>
+            <a href="{% url 'login' %}" class="btn btn-dark btn-sm ms-2">Login</a>
+        </div>
+    </form>
+</div>
 
-<form method="POST" class="form-group w-50 mx-auto">
-    {% csrf_token %}
-    {{ form|crispy }}
-    <button type="submit" class="btn btn-success w-100 mt-2">Register</button>
-</form>
 {% endblock %}
