--- a/FinalProject/templates/registration/login.html
+++ b/FinalProject/templates/registration/login.html
@@ -1,16 +1,25 @@
 {% extends "register/register.html" %}
 
 {% block title %}
-Login here
+Login
 {% endblock %}
 
 {% load crispy_forms_tags %}
 
 {% block content %}
-<form method="post" class="form-group">
-    {% csrf_token %}
-    {{ form | crispy }}
-    <button type="submit" class="btn btn-success">Login</button>
-    <p>Don't have an account? Create one <a href="/register/">here</a></p>
-</form>
+<!--login section-->
+<div class="container mt-5" style="max-width: 500px;">
+    <h2 class="mb-4 text-center">Login</h2>
+    <form method="post" class="form-group shadow p-4 rounded bg-light">
+        {% csrf_token %}
+        {{ form|crispy }}
+        <button type="submit" class="btn btn-success w-100 mt-2">Login</button>
+        <div class="mt-3 d-flex justify-content-between align-items-center">
+            <!--register button-->
+            <span>Don't have an account?</span>
+            <a href="{% url 'register' %}" class="btn btn-warning btn-sm">Register</a>
+        </div>
+    </form>
+</div>
+
 {% endblock %}
