--- a/FinalProject/home/templates/home/category.html
+++ b/FinalProject/home/templates/home/category.html
@@ -10,7 +10,7 @@
         <a href="{% url 'vinyl_detail' vinyl.pk %}" class="text-decoration-none text-dark vinyl-card-wrapper">
             <div class="card vinyl-card text-center">
                 {% if vinyl.image %}
-                    <img src="{{ vinyl.image.url }}" class="card-img-top" alt="{{ vinyl.title }}">
+                    <img src="/static{{ vinyl.image.url }}" class="card-img-top" alt="{{ vinyl.title }}">
                 {% endif %}
                 <div class="card-body d-flex flex-column justify-content-between">
                     <h6 class="card-title text-truncate" title="{{ vinyl.title }}">{{ vinyl.title }}</h6>
