--- a/FinalProject/home/templates/home/vinyl_detail.html
+++ b/FinalProject/home/templates/home/vinyl_detail.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="row">
   <div class="col-md-5">
-    <img src="{{ vinyl.image.url }}" class="img-fluid rounded shadow" alt="{{ vinyl.title }}">
+    <img src="/static{{ vinyl.image.url }}" class="img-fluid rounded shadow" alt="{{ vinyl.title }}">
     <br><br>
   </div>
   <!--vinyl information-->
